# kmvid

./: .gitignore  pyproject.toml  readme.txt  requirements.txt  test.bat
doc/: script.html  style.css
example/: cards.py  fonts.py  text_blocks.py
kmvid/: script.py
kmvid/data/: clip.py  common.py  draw.py  effect.py  expression.py  ffmpeg.py  gradient.py  project.py  resource.py  state.py  text.py  variable.py
kmvid/user/: library.py
src/kmvid/: script.py
src/kmvid/data/: clip.py  common.py  draw.py  effect.py  ffmpeg.py  project.py  resource.py  state.py  text.py  variable.py
src/kmvid/tool/: doc.py
test/: test_clip.py  test_effect.py  test_expression.py  test_resource.py  test_simple.py  test_variable.py  testbase.py
test/kmvid/data/: test_clip.py  test_draw.py  test_effect.py  test_expression.py  test_resource.py  test_simple.py  test_text.py  test_variable.py
test/kmvid/user/: test_library.py
